plugins {
    id 'fabric-loom' version '0.12-SNAPSHOT'
    id 'io.github.juuxel.loom-quiltflower' version '1.6.1'
    id 'maven-publish'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

loom {
    accessWidenerPath = file("src/main/resources/bewitchmentplus.accesswidener")
}

repositories {
    maven {
        name = "Bewitchment"
        url = "https://www.cursemaven.com"
    }
    maven {
        name = 'Ladysnake Mods'
        url = 'https://ladysnake.jfrog.io/artifactory/mods'
    }
    maven {
        name = "wood api"
        url = "https://maven.terraformersmc.com/"
    }
    maven {
        name = "reach"
        url = "https://maven.jamieswhiteshirt.com/libs-release"
    }
    maven {
        name = "cardinal"
        url = 'https://ladysnake.jfrog.io/artifactory/mods'
    }
    maven {
        name = "cloth config"
        url = "https://maven.shedaniel.me/"
    }
    maven {
        name = "patchouli"
        url = "https://maven.blamejared.com"
    }
    maven {
        name = "Mod Menu"
        url =  "https://maven.terraformersmc.com/releases"
    }
    maven {
        name = "Conditional Crafting"
        url = "https://ytg1234.github.io/maven"
    }

    maven {
        name = "dblsaiko"
        url = "https://maven.dblsaiko.net/"
    }
    maven {
        name = "Cotton"
        url = "http://server.bbkr.space:8081/artifactory/libs-release/"
        allowInsecureProtocol = true
    }
    maven {
        name = "CurseForge"
        url = "https://minecraft.curseforge.com/api/maven"
    }
    maven {
        name "appleskin"
        url "https://maven.ryanliptak.com/"
    }
    maven {
        name "impersonate"
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }

    maven {
        name "GeckoLib"
        url "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
    }

    maven {
        name "modrinth"
        url "https://api.modrinth.com/maven"
    }
    maven {
        name = "jitpack"
        url = "https://jitpack.io"
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    modImplementation "com.terraformersmc.terraform-api:terraform-wood-api-v1:${project.terraform_wood_api_version}"
    include "com.terraformersmc.terraform-api:terraform-wood-api-v1:${project.terraform_wood_api_version}"
    modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}"
    include "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}"
    modImplementation "io.github.ladysnake:PlayerAbilityLib:${pal_version}"

    modImplementation "com.github.emilyploszaj:step-height-entity-attribute:${step_height_version}"
    modImplementation "io.github.ladysnake:PlayerAbilityLib:${pal_version}"
    include "io.github.ladysnake:PlayerAbilityLib:${pal_version}"


    modImplementation("com.github.virtuoel:pehkui:${project.pehkui_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modImplementation "io.github.ladysnake:impersonate:${impersonate_version}"
    modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
    modImplementation "com.github.emilyalexandra:trinkets:${trinkets_version}"
    modImplementation "software.bernie.geckolib:geckolib-fabric-${project.gecko_version}"

    modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:${rei_version}"
    modRuntimeOnly  "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"


    modImplementation "curse.maven:bewitchment-394915:${project.bewitchment_version}"
    modImplementation "curse.maven:besmirchment-2-542196:${project.besmirchment_version}"
    modCompileOnly("squeek.appleskin:appleskin-fabric:${appleskin_version}:api") {
        transitive = false
    }
    modImplementation "maven.modrinth:midnightlib:${midnightlib_version}"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    withSourcesJar()
}

jar {
    from "LICENSE"
}